# miuu_wr_checker_rust

./: .gitignore  Cargo.toml  README.md  miuu_level_ids.json  miuu_levelid_to_name.json
src/: config.rs  db.rs  embed.rs  lib.rs  main.rs  metadata.rs  miu.rs  replay.rs  request.rs  score.rs  test_util.rs  webhook.rs  weekly.rs  weekly_data.rs
src/discord/: embed.rs  mod.rs  webhook.rs
src/miu/: mod.rs  replay.rs  score.rs  weekly.rs  weekly_data.rs
