[package]
name = "miuu_wr_checker_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# miu_parse = { path = "../miu_parse" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
futures = "0.3"
colored = "2.1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "chrono"] }
